--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,26 +4,16 @@ packages = [
     { include = "aionxapi" },
     { include = "asyncnxapi" }
 ]
-version = "0.5.0"
+version = "0.5.1"
 description = "Cisco NX-API asyncio client"
 authors = ["Jeremy Schulman"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.11"
+python = ">=3.10"
 httpx = "^0.23.0"
 lxml = "^4.9.1"
 
-[tool.poetry.group.dev.dependencies]
-invoke = "^1.7.3"
-black = "^22.10.0"
-flake8 = "^5.0.4"
-flake8-breakpoint = "^1.1.0"
-pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
-pytest-asyncio = "^0.20.1"
-pre-commit = "^2.20.0"
-interrogate = "^1.5.0"
 
 [tool.black]
 target-version = ['py38', 'py310']
